--- a/root/package.json
+++ b/root/package.json
@@ -24,7 +24,8 @@
     "mongoose": "3.6.4",
     "request": "2.12.0",
     "underscore": "1.4.3",
-    "fuel": "~0.2.1"
+    "fuel": "~0.2.1",
+    "less": "1.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
