--- a/root/.gitignore
+++ b/root/.gitignore
@@ -174,6 +174,5 @@ packages/
 #############################
 # WebStorm
 #############################
-.idea/workspace.xml
-.idea/tasks.xml
+.idea/
 .iws
